--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Tantra</title>
+    <!--  Jquery  -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--  Swiper  -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <!--  Custom script  -->
+    <script src="js/main.js"></script>
+    <!--  Less compile  -->
+    <link rel="stylesheet/less" type="text/css" href="less/main.less" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </head>
 <body>
 
@@ -341,5 +351,174 @@
         </div>
     </div>
 
+    <div class="visit">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="visit-card">
+                        <div class="visit-info">
+                            <p>visit us</p>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <div class="visit-form">
+                                    <div class="visit-title">
+                                        <p>leave a request</p>
+                                    </div>
+                                    <div class="visit-input">
+                                        <input type="text" placeholder="Name">
+                                    </div>
+                                    <div class="visit-input">
+                                        <input type="text" placeholder="Phone Number">
+                                    </div>
+                                    <div class="visit-input">
+                                        <input type="text" placeholder="Email Address">
+                                    </div>
+                                    <div class="visit-policy">
+                                        <input type="checkbox" >
+                                        <p>I agree to the processing of personal data <a href="">Privacy policy
+                                        </a></p>
+                                    </div>
+                                    <div class="visit-submit">
+                                        <button>Send</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="apartments">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6">
+                    <div class="apartments-slider swiper-container">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="apartments-slide">
+                                    <img src="img/apartments.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="apartments-arrows">
+                        <div class="arrow-left">
+                            <a href="#"><img src="img/arrow-left.svg" alt=""></a>
+                        </div>
+                        <div class="arrow-slide">
+                            <a href="#"><span></span></a>
+                            <a href="#"><span></span></a>
+                            <a href="#"><span></span></a>
+                            <a href="#"><span></span></a>
+                            <a href="#"><span></span></a>
+                        </div>
+                        <div class="arrow-right">
+                            <a href="#"><img src="img/arrow-rigth.svg" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="apartments-content">
+                        <div class="content-title">
+                            <h2>Apartments</h2>
+                        </div>
+                        <div class="content-desc">
+                            <p>It is better to book in advance and just call one hour before the session to confirm your visit. However, this is not a condition; you can visit our shop spontaneously at our address.</p>
+                        </div>
+                        <div class="content-visit">
+                            <p class="title">You can visit us at:</p>
+                            <p class="street">Bodytouch salón Klatovská 16 </p>
+                        </div>
+                        <div class="content-list">
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                            <div class="content-item">
+                                <a href="">
+                                    <img src="img/apartments.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="map"></div>
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-2">
+                    <div class="footer-logo">
+                        <a href="">
+                            <img src="img/logo.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-street">
+                        <div class="street-marker">
+                            <img src="img/map.svg" alt="">
+                        </div>
+                        <div class="street-desc">
+                            <p>Klatovská 16
+                                Bratislava</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-policy">
+                        <a href="">
+                            Privacy policy
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-phone">
+                        <div class="footer-phone__tel">
+                            <a href="">0948 158 888</a>
+                        </div>
+                        <div class="footer-phone__callback">
+                            <a href="">Request a call</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2">
+                    <div class="footer-callback">
+                        <a href="">
+                            <button>Visit us</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
