--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
     <!--  Jquery  -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!--  Swiper  -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <script src="js/swiper.min.js"></script>
     <!--  Custom script  -->
     <script src="js/main.js"></script>
     <!--  Less compile  -->
