--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
 
             <div class="header-menu">
                 <nav>
-                    <a href="" class="header-menu__link">Home</a>
-                    <a href="" class="header-menu__link">Price list</a>
-                    <a href="" class="header-menu__link">Massages</a>
-                    <a href="" class="header-menu__link">Contact</a>
-                    <a href="" class="header-menu__link">Tantra team</a>
-                    <a href="" class="header-menu__link">Gallery</a>
+                    <a href="index.html" class="header-menu__link">Home</a>
+                    <a href="price.html" class="header-menu__link">Price list</a>
+                    <a href="massages.html" class="header-menu__link">Massages</a>
+                    <a href="contact.html" class="header-menu__link">Contact</a>
+                    <a href="#" class="header-menu__link">Tantra team</a>
+                    <a href="#" class="header-menu__link">Gallery</a>
                 </nav>
             </div>
 
