--- a/index.html
+++ b/index.html
@@ -24,44 +24,44 @@
 <body>
 
     <div class="header">
-        <div class="header-container">
-            <div class="header-row">
+    <div class="header-container">
+        <div class="header-row">
 
-                <div class="header-logo">
-                    <a href=""><img src="img/logo.png" alt="" class="header-logo__img"></a>
-                </div>
-
-                <div class="header-menu">
-                    <nav>
-                        <a href="" class="header-menu__link">Home</a>
-                        <a href="" class="header-menu__link">Price list</a>
-                        <a href="" class="header-menu__link">Massages</a>
-                        <a href="" class="header-menu__link">Contact</a>
-                        <a href="" class="header-menu__link">Tantra team</a>
-                        <a href="" class="header-menu__link">Gallery</a>
-                    </nav>
-                </div>
-                
-                <div class="header-lang">
-                    <div class="header-lang__btn">
-                        <a href="#" class="btn-lang">SK</a>
-                        <span></span>
-                        <a href="#" class="btn-lang">EN</a>
-                    </div>
-                </div>
-                
-                <div class="header-phone">
-                    <div class="header-phone__tel">
-                        <a href="">0948 158 888</a>
-                    </div>
-                    <div class="header-phone__callback">
-                        <a href="">Request a call</a>
-                    </div>
-                </div>
-
+            <div class="header-logo">
+                <a href=""><img src="img/logo.png" alt="" class="header-logo__img"></a>
             </div>
+
+            <div class="header-menu">
+                <nav>
+                    <a href="index.html" class="header-menu__link">Home</a>
+                    <a href="price.html" class="header-menu__link">Price list</a>
+                    <a href="massages.html" class="header-menu__link">Massages</a>
+                    <a href="contact.html" class="header-menu__link">Contact</a>
+                    <a href="#" class="header-menu__link">Tantra team</a>
+                    <a href="#" class="header-menu__link">Gallery</a>
+                </nav>
+            </div>
+
+            <div class="header-lang">
+                <div class="header-lang__btn">
+                    <a href="#" class="btn-lang">SK</a>
+                    <span></span>
+                    <a href="#" class="btn-lang">EN</a>
+                </div>
+            </div>
+
+            <div class="header-phone">
+                <div class="header-phone__tel">
+                    <a href="">0948 158 888</a>
+                </div>
+                <div class="header-phone__callback">
+                    <a href="">Request a call</a>
+                </div>
+            </div>
+
         </div>
     </div>
+</div>
 
     <div class="main-video">
         <div class="container">
